		School Admin: interface text tweak in Manage Grade Scales
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Staff: tweaked student accept to remove - from names
		Staff: fixed date display in Job Openings manage page
		Staff: added setting to control public display of staff application form (public applications are on by default)
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		Students: tweaked student accept to remove - from names
		Students: fixed broken link from Family in student profile to sibling, when sibling is not enroled in the year
		Students: removed delete function from Notes, added logging for edits
		Students: adjusted family view of student profile to ensure only adults with status Full show
		Students: added a confirmation email to parent 1 for external student application forms
		Students: fixed PayPal locale code to correctly set PayPal language on redirect
		Students: fixed tooltip alignment on alert bar above student profile image
		Students: fixed colspan issue in Data Update report when no records found
		Students: added student ID to search
		Students: added student image to privacy report
		Students: added setting to allow student note creation notification to be sent to all teachers
		Students: addition of new sub-action to allow viewing of full student profiles, without Notes
		Students: added date range to Form Group Summary report
		Students: increased length of student search field
		System Admin: added ability to custom order module categories in main menu
		System Admin: added system check page with version & extension information
		System Admin: coloured rows for inactive module in Manage Modules
		System Admin: fixed PHP notice in Manage Modules when un-installed modules present
		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
		Timetable: PHP Notice fix on heigh constant
		Timetable: fixed typo in class edit view